<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context="com.appcreator.scientificcalculator.MainActivity">

    <TextView
        android:id="@+id/prevCalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/displayEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="textEnd"
        android:layout_marginBottom="40dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName"
        android:hint="@string/displayHint"
        android:textColorHint="@color/greyAccent"
        android:textSize="48sp"
        android:importantForAutofill="no"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="end" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="decimalButton"
            android:text="@string/decimalText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button23"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="addButton"
            android:text="@string/addText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="threeButton"
            android:text="@string/threeText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="twoButton"
            android:text="@string/twoText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="oneButton"
            android:text="@string/oneText"

            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="subtractButton"
            android:text="@string/subtractText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sixButton"
            android:text="@string/sixText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button10"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="multiplyButton"
            android:text="@string/multiplyText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <Button
            android:id="@+id/button11"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="nineButton"
            android:text="@string/nineText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button12"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="parenthesesCloseButton"
            android:text="@string/parenthesesCloseText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button36" />

        <Button
            android:id="@+id/button13"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fiveButton"
            android:text="@string/fiveText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button14"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="eightButton"
            android:text="@string/eightText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <Button
            android:id="@+id/button15"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fourButton"
            android:text="@string/fourText"

            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button16"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sevenButton"
            android:text="@string/sevenText"

            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button17"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:background="@drawable/clear_button_background"
            android:onClick="clearButton"
            android:text="@string/clearText"
            android:layout_marginTop="10dp"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button37" />

        <Button
            android:id="@+id/button18"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="parenthesesOpenButton"
            android:text="@string/parenthesesOpenText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button37" />

        <Button
            android:id="@+id/button20"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="divideButton"
            android:text="@string/divideText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button19" />

        <Button
            android:id="@+id/button21"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/equal_button_background"
            android:onClick="equalsButton"
            android:text="@string/equalsText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <ImageButton
            android:id="@+id/button19"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/backspace"
            android:onClick="backspaceButton"
            android:textColor="@color/tanAccent"

            app:layout_constraintStart_toEndOf="@+id/button36"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backspace" />

        <Button
            android:id="@+id/button23"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="zeroButton"
            android:text="@string/zeroText"

            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/button5"
            app:layout_constraintStart_toStartOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button36"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="percentageBTNPush"
            android:text="@string/percentageText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button37"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button37"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:background="@drawable/arithmetic_button_background"
            android:onClick="factorialBTNPush"
            android:text="@string/factorialText"
            android:textAllCaps="false"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@+id/button18"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>